infrastructure/k8s/api.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: distributed-workflow

spec:
  type: ClusterIP

  selector:
    app: api

  ports:
    - name: http
      port: 80
      targetPort: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: distributed-workflow

spec:
  replicas: 3

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: distributed-workflow-api:local
          imagePullPolicy: Never

          ports:
            - name: http
              containerPort: 8080

          startupProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 2
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
