infrastructure/k8s/kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  namespace: distributed-workflow
spec:
  clusterIP: None
  selector:
    app: redpanda
  ports:
    - name: kafka
      port: 9092
      targetPort: kafka

    - name: admin
      port: 9644
      targetPort: admin
  
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redpanda
  namespace: distributed-workflow
spec:
  serviceName: redpanda
  replicas: 1

  selector:
    matchLabels:
      app: redpanda

  template:
    metadata:
      labels:
        app: redpanda

    spec:
      containers:
        - name: redpanda
          image: docker.redpanda.com/redpandadata/redpanda:v26.2.3

          args:
            - redpanda
            - start
            - --kafka-addr
            - internal://0.0.0.0:9092
            - --advertise-kafka-addr
            - internal://redpanda-0.redpanda:9092
            - --mode
            - dev-container
            - --smp
            - "1"

          ports:
            - name: kafka
              containerPort: 9092

            - name: admin
              containerPort: 9644

          volumeMounts:
            - name: data
              mountPath: /var/lib/redpanda/data

          startupProbe:
            exec:
              command:
                - rpk
                - cluster
                - health
                - --exit-when-healthy
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 12

          readinessProbe:
            exec:
              command:
                - rpk
                - cluster
                - health
                - --exit-when-healthy
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: redpanda-console
  namespace: distributed-workflow
spec:
  selector:
    app: redpanda-console

  ports:
    - name: http
      port: 8080
      targetPort: http
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda-console
  namespace: distributed-workflow
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redpanda-console

  template:
    metadata:
      labels:
        app: redpanda-console

    spec:
      containers:
        - name: redpanda-console
          image: docker.redpanda.com/redpandadata/console:v3.12.0

          ports:
            - name: http
              containerPort: 8080

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 24

          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
