infrastructure/k8s/numbering-grpc.yml
apiVersion: v1
kind: Service
metadata:
  name: numbering-grpc
  namespace: distributed-workflow

spec:
  type: ClusterIP

  selector:
    app: numbering-grpc

  ports:
    - name: grpc
      protocol: TCP     
      port: 8080
      targetPort: grpc
      appProtocol: kubernetes.io/h2c

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: numbering-grpc
  namespace: distributed-workflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: numbering-grpc

  template:
    metadata:
      labels:
        app: numbering-grpc

    spec:
      containers:
        - name: numbering-grpc
          image: distributed-workflow-numbering-grpc:local
          imagePullPolicy: Never
          
          ports:
            - name: grpc
              containerPort: 8080
          
          startupProbe:
           tcpSocket:
             port: grpc
           periodSeconds: 5
           timeoutSeconds: 2
           failureThreshold: 12

          readinessProbe:
           tcpSocket:
             port: grpc
           periodSeconds: 5
           timeoutSeconds: 2
           failureThreshold: 3
