infrastructure/k8s/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: distributed-workflow
spec:
  clusterIP: None

  selector:
    app: rabbitmq

  ports:
    - name: amqp
      port: 5672
      targetPort: amqp

    - name: management
      port: 15672
      targetPort: management

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: distributed-workflow

spec:
  serviceName: rabbitmq
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management

          ports:
            - name: amqp
              containerPort: 5672

            - name: management
              containerPort: 15672

          startupProbe:
              tcpSocket:
                port: amqp
              periodSeconds: 5
              timeoutSeconds: 2
              failureThreshold: 24

          readinessProbe:
              tcpSocket:
                port: amqp
              periodSeconds: 5
              timeoutSeconds: 2
              failureThreshold: 3

          volumeMounts:
            - name: data
              mountPath: /var/lib/rabbitmq

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
