infrastructure/k8s/worker.yml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: distributed-workflow
spec:
  selector:
    app: worker
  ports:
    - name: worker
      port: 8080
      targetPort: worker

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: distributed-workflow

spec:
  replicas: 4

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker
          image: distributed-workflow-worker:local
          imagePullPolicy: Never

          ports:
            - name: worker
              containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
